k8s/04-db-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jerney-db
  namespace: jerney
  labels:
    app.kubernetes.io/name: jerney-db
    app.kubernetes.io/part-of: jerney
    app.kubernetes.io/component: database
spec:
  serviceName: jerney-db
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jerney-db
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jerney-db
        app.kubernetes.io/part-of: jerney
        app.kubernetes.io/component: database
    spec:
      serviceAccountName: jerney-db-sa
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 10000 
        allowPrivilegeEscalation: false
      tolerations:
        - key: "karpenter.sh/disrupted"
          operator: "Exists"
          effect: "NoSchedule"
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
              subPath: postgres-data
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          securityContext:
            runAsNonRoot: true
            runAsUser: 10000
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop: ["ALL"]
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - jerney_user
                - -d
                - jerney_db
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - jerney_user
                - -d
                - jerney_db
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
  volumeClaimTemplates:
    - metadata:
        name: data
        labels:
          app.kubernetes.io/part-of: jerney
          app.kubernetes.io/component: database
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: jerney-ebs-storage-class
        resources:
          requests:
            storage: 10Gi
