k8s/08-frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jerney-frontend
  namespace: jerney
  labels:
    app.kubernetes.io/name: jerney-frontend
    app.kubernetes.io/part-of: jerney
    app.kubernetes.io/component: frontend
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jerney-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jerney-frontend
        app.kubernetes.io/part-of: jerney
        app.kubernetes.io/component: frontend
    spec:
      automountServiceAccountToken: false
      serviceAccountName: jerney-frontend-sa
      tolerations:
        - key: "karpenter.sh/disrupted"
          operator: "Exists"
          effect: "NoSchedule"
      containers:
        - name: jerney-frontend
          imagePullPolicy: Always
          image: ghcr.io/SafouaneHaddadi/jerney-devsecops/jerney-frontend:dabab0b
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
          securityContext:
            runAsNonRoot: true
            runAsUser: 10002
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            seccompProfile: 
              type: RuntimeDefault
            capabilities:
              drop: ["ALL"]             
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
          volumeMounts:
            - name: nginx-cache
              mountPath: /var/cache/nginx
            - name: nginx-run
              mountPath: /var/run
            - name: tmp-volume
              mountPath: /tmp
      volumes:
        - name: nginx-cache
          emptyDir: {}
        - name: nginx-run
          emptyDir: {}
        - name: tmp-volume
          emptyDir: {}
