k8s/07-backend-service.yml
# This creates a Service that helps other parts of the app find and connect to the backend app inside the cluster on port 5000
apiVersion: v1
kind: Service
metadata:
  name: jerney-backend
  namespace: jerney
  annotations:
    description: "Internal service accessible only within the cluster"
  labels:
    app.kubernetes.io/name: jerney-backend
    app.kubernetes.io/part-of: jerney
    app.kubernetes.io/component: backend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: jerney-backend
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
