k8s/09-frontend-service.yml
# This creates a Service that exposes the frontend app outside the cluster on port 80 using a LoadBalancer
apiVersion: v1
kind: Service
metadata:
  name: jerney-frontend
  namespace: jerney
  annotations:
    description: "Exposes the application to the internet via AWS load balancer"
  labels:
    app.kubernetes.io/name: jerney-frontend
    app.kubernetes.io/part-of: jerney
    app.kubernetes.io/component: frontend
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: jerney-frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
